=== 4.1.2.1 (TBD)

=== 4.1.2.0 (2011-9-16)
* Upgrade to httpclient 4.1.2, httpcore 4.1.3

=== 4.1.1.1 (2011-6-11)
* Explicitly include HttpCore 4.1.1 (HttpClient only requires 4.1)

=== 4.1.1.0 (2011-6-11)
* Upgrade to HttpClient 4.1.1

=== 4.0.3.0 (2010-12-28)
* Upgrade to HttpComponents HttpClient 4.0.3

=== 4.0.1.2 (2010-8-31)
* Remove require 'rubygems' from lib, require 'java' for imports.
* Expand slf4j/logback gem deps for compatibility with
  slf4j-1.6.x/logback-1.x

=== 4.0.1.1 (2010-3-6)
* Set gem platform to java
* Upgraded to tarpit ~> 1.2.0

=== 4.0.1.0 (2009-12-19)
* Upgrade to HttpComponents HttpClient 4.0.1
* Upgrade to tarpit-1.1.0 (gemcutter)

=== 4.0.0 (2009-10-10)
* Update jars and docs for HTTPComponents 4.0 HttpClient and dependencies.
* Rename gem rjack-httpclient-4 and as module RJack::HTTPClient4

=== 3.1.3 (2009-10-10)
* Rename gem rjack-httpclient-3 and as module RJack::HTTPClient3
* Update/relax rjack-slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
* Replace included commons-codec with rjack-commons-codec gem dependency.
* Use rjack-tarpit for build.

=== 3.1.2 (2009-5-29)
* Use rdoc 2.4.3 and hoe 1.12.2 for build.

=== 3.1.1 (2009-2-22)
* Inital release based on HttpClient 3.1